# slantydog

./: .gitignore  Cargo.toml  README.md  slantydog_tree.txt
aardwolf-api/: Cargo.toml
aardwolf-api/aardwolf-api-common/: Cargo.toml
aardwolf-api/aardwolf-api-common/config/: config.toml
aardwolf-api/aardwolf-api-common/src/: config.rs  lib.rs  models.rs  responses.rs
aardwolf-api/aardwolf-api-common/src/models/: direct_messages.rs  error.rs  models.rs  posts.rs  users.rs
aardwolf-api/backend-api/: Cargo.toml
aardwolf-api/backend-api/src/: actix_backend.rs  actix_routing.rs  api_backend.rs  api_backend_routes.rs  backend.rs  backend_endpoints.rs  backend_main.rs  direct_messages.rs  endpoints.rs  lib.rs  main.rs  responses.rs  warp_backend.rs  warp_routing.rs
aardwolf-api/backend-api/src/backend/: actix_backend.rs  endpoints.rs  warp_backend.rs
aardwolf-api/backend-api/src/backend_engines/: actix_backend.rs  lib.rs  warp_backend.rs
aardwolf-api/backend-api/src/routes/: posts.rs
aardwolf-api/database-api/: Cargo.toml  README.md
aardwolf-api/database-api/src/: api_database.rs  api_db_routes.rs  connection_pool.rs  database.rs  database_api.rs  database_main.rs  lib.rs  mysql.rs  placeholder.txt  postgres.rs  sqlite.rs
aardwolf-api/database-api/src/database_engines/: lib.rs
aardwolf-api/database-api/src/database_engines/mysql/: lib.rs  mysql.rs
aardwolf-api/database-api/src/database_engines/postgres/: lib.rs  postgres.rs
aardwolf-api/database-api/src/database_engines/sqlite/: lib.rs  sqlite.rs
aardwolf-api/database-api/src/traits/: db_handler.rs  lib.rs
aardwolf-api/frontend-api/: Cargo.toml
aardwolf-api/frontend-api/src/: api_post_routes.rs  api_user_routes.rs  lib.rs
aardwolf-api/src/: main.rs
tests/: models.rs
