[package]
name = "aardwolf-api"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "aardwolf-api-common",
    "backend-api",
    "database-api",
    "frontend-api",
]

[dependencies]
aardwolf_api_common = { path = "aardwolf-api-common" }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"